# src/model/RegistrationTypes.ts
@@ -1,5 +1,0 @@
-export enum RegistrationTypes {
-  Local,
-  Facebook,
-  Twitter
-}
